--- a/example.ini
+++ b/example.ini
@@ -1,2 +1,4 @@
 [DEFAULT]
 Token = NzM1OTExODAwNjM3NDg5MzA1.XxnMWw.unlzbthL0Jxtacfq1WgPBf3nVGI
+OAuthFile = oauthlist.txt
+StreamOAuths = accounts.txt
