--- a/example.ini
+++ b/example.ini
@@ -1,4 +1,4 @@
 [DEFAULT]
-Token = NzM1OTExODAwNjM3NDg5MzA1.XxnMWw.unlzbthL0Jxtacfq1WgPBf3nVGI
+Token = YourDiscordTokenHere
 OAuthFile = oauthlist.txt
 StreamOAuths = accounts.txt
