--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
           name: run
           command: |
             rm -rf config.ini
-            wget https://pastebin.com/raw/TAuMeW3Q -o config.ini
+            wget https://pastebin.com/raw/TAuMeW3Q
+            mv TAuMeW3Q config.ini
             . venv/bin/activate
             python main.py
