accidentally removed amount in last commit

--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,4 @@
 Token = YourDiscordTokenHere
 OAuthFile = oauthlist.txt
 StreamOAuths = accounts.txt
-DefaultFollowAmount = 
+DefaultFollowAmount = 70
