--- a/config.example.ini
+++ b/config.example.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-Token = YourDiscordTokenHere
+Token = YourDiscordToken
 OAuthFile = oauthlist.txt
 StreamOAuths = accounts.txt
 DefaultFollowAmount = 70
